# conveyorlc

./: .gitignore  CMakeLists.txt  License  Makefile.am  README.md  autogen.sh  build  build-cmake-mac.sh  build-cmake.sh  build.sh  configure.in  makeit
apps/: CMakeLists.txt  Makefile.am
apps/conduitppl/: CDT1Receptor.cpp  CDT1Receptor.h  CDT1ReceptorPO.cpp  CDT1ReceptorPO.h  CDT2Ligand.cpp  CDT2Ligand.h  CDT2LigandNoMin.cpp  CDT2LigandNoMin.h  CDT2LigandPO.cpp  CDT2LigandPO.h  CDT3Docking.cpp  CDT4mmgbsa.cpp  CDT4mmgbsa.h  CDT4mmgbsaPO.cpp  CDT4mmgbsaPO.h  CMakeLists.txt  InitEnv.h  dock.cpp  dock.h  mainProcedure.cpp  mainProcedure.h  mpiparser.cpp  mpiparser.h
apps/docking/: Makefile.am  dock.cpp  mpiparser.cpp  mpiparser.h  vina.cpp  vinaLC.cpp
apps/h5tools/: CMakeLists.txt  H5Docking.cpp  H5Docking.h  H5DockingPO.cpp  H5DockingPO.h  H5Ligand.cpp  H5Ligand.h  H5LigandPO.cpp  H5LigandPO.h  H5Merge.cpp  H5Merge.h  H5MergePO.cpp  H5MergePO.h  H5Native.cpp  H5Native.h  H5Receptor.cpp  H5Receptor.h  H5ReceptorPO.cpp  H5ReceptorPO.h  H5Split.cpp  H5Split.h  H5SplitPO.cpp  H5SplitPO.h
apps/mmpbsa/: Makefile.am  amberTools.cpp  amberToolsPO.cpp  amberToolsPO.h  glideGBSA.cpp  glideGBSAPO.cpp  glideGBSAPO.h  mmgbsa.cpp  mmgbsaPO.cpp  mmgbsaPO.h  mmpbsa.cpp  mmpbsaPO.cpp  mmpbsaPO.h  preLigands.cpp  preLigandsPO.cpp  preLigandsPO.h  preReceptors.cpp  preVinaLC.cpp  premmpbsa.cpp  processVinaLC.cpp
apps/pipeline/: CMakeLists.txt  Makefile.am  PPL1Receptor.cpp  PPL1ReceptorPO.cpp  PPL1ReceptorPO.h  PPL2Ligand.cpp  PPL2LigandPO.cpp  PPL2LigandPO.h  PPL2VolumeFilter.cpp  PPL2VolumeFilterPO.cpp  PPL2VolumeFilterPO.h  PPL3Docking.cpp  PPL4PostProcess.cpp  PPL4mmgbsa.cpp  PPL4mmgbsaPO.cpp  PPL4mmgbsaPO.h  PPL4parseXML.cpp  dock.cpp  dock.h  mainProcedure.h  mpiparser.cpp  mpiparser.h
apps/standalone/: CMakeLists.txt  InitEnv.h  SDL1Receptor.cpp  SDL1Receptor.h  SDL1ReceptorPO.cpp  SDL1ReceptorPO.h  SDL2Ligand.cpp  SDL2Ligand.h  SDL2LigandNoMin.cpp  SDL2LigandNoMin.h  SDL2LigandPO.cpp  SDL2LigandPO.h  SDL3Docking.cpp  dock.cpp  dock.h  mpiparser.cpp  mpiparser.h
apps/tools/: CMakeLists.txt  Makefile.am  calcSASA.cpp  calcSASAPO.cpp  calcSASAPO.h  calcSite.cpp  calcSitePO.cpp  calcSitePO.h  jobTracking.cpp  jobTrackingPO.cpp  jobTrackingPO.h  mol2Info.cpp  mol2InfoPO.cpp  mol2InfoPO.h  obtest.h  testGround.cpp  testOpenBabel.cpp
apps/tools/testfiles/: alanine.sdf  ligand.sdf
apps/variants/: AHA4mmgbsa.cpp  AHA4mmgbsa.h  AHA4mmgbsaPO.cpp  AHA4mmgbsaPO.h  CMakeLists.txt  SAF4mmgbsa.cpp  SAF4mmgbsa.h  SAF4mmgbsaPO.cpp  SAF4mmgbsaPO.h  SAF4mmgbsaTest.cpp
cmake/: FindOpenBabel3.cmake  FindSQLite3.cmake
data/: nonStdRes.xml  residues.xml
doc/: Doxyfile.in
doc/local/: futureWork.doc  header.html  mainpage.doc  userGuide.doc  userGuide.html
examples/: CDT1Receptor.job  CDT1Receptor.sh  CDT2Ligand.job  CDT2Ligand.sh  CDT3Docking.job  CDT3Docking.sh  CDT4mmgbsa.job  CDT4mmgbsa.sh  pdb.list  pur2.sdf
examples/lib/: NAP.frcmod  NAP.mol2  SGB.frcmod  SGB.off
scripts/: PPL2FilterLigands.py  addUserCharge2SDF.py  findNoStdAA.py  ligOverlay.py  ligProperty.py  native_hdf5.py  rmProteinPPL3.py  skipLargeLigand.py  smile2sdf.py  splitSDF.py  split_pdbqt.sh
scripts/HDF5/: CDT1Receptor.py  CDT2Ligand.py  CDT3Docking.py  CDT4mmgbsa.py  CDT4mmgbsaRMbyGB.py  (+5 more)
src/: CMakeLists.txt  Makefile.am
src/BackBone/: ADR.cpp  ADR.h  Base.cpp  Base.h  Grid.cpp  Grid.h  Ligand.cpp  Ligand.h  Pathway.cpp  Pathway.h  Protein.cpp  Protein.h  Surface.cpp  Surface.h
src/Common/: Chomp.hpp  Command.hpp  Control.cpp  Control.h  Exec.hpp  File.hpp  LBindException.cpp  LBindException.h  Timer.hpp  Tokenize.hpp  Utils.h
src/DataBase/: SHA1.cpp  SHA1.h  SqlCommon.cpp  SqlCommon.h  SqlDatabase.cpp  SqlDatabase.h  SqlField.cpp  SqlField.h  SqlFieldSet.cpp  SqlFieldSet.h  SqlRecord.cpp  SqlRecord.h  SqlRecordSet.cpp  SqlRecordSet.h  SqlTable.cpp  SqlTable.h  SqlValue.cpp  SqlValue.h
src/MM/: Amber.cpp  Amber.h  AutoDock.cpp  AutoDock.h  CDTgbsa.cpp  CDTgbsa.h  Gromacs.cpp  Gromacs.h  MMGBSA.cpp  MMGBSA.h  Namd.cpp  Namd.h  SpMMGBSA.cpp  SpMMGBSA.h  SpMMPBSA.cpp  SpMMPBSA.h  VinaLC.cpp  VinaLC.h
src/Parser/: ElementParser.cpp  ElementParser.h  GZstream.cpp  GZstream.h  Mol2.cpp  Mol2.h  Pdb.cpp  Pdb.h  SanderOutput.cpp  SanderOutput.h  Sdf.cpp  Sdf.h
src/Structure/: Atom.cpp  Atom.h  BaseParser.cpp  BaseParser.h  BaseStruct.cpp  BaseStruct.h  Bond.cpp  Bond.h  BondContainer.cpp  BondContainer.h  Complex.cpp  Complex.h  Connectivity.cpp  Connectivity.h  Constants.h  Coor3d.cpp  Coor3d.h  Coordinates.cpp  Coordinates.h  DataStruct.h  Element.cpp  Element.h  ElementContainer.cpp  ElementContainer.h  ElementParser.cpp  Fragment.cpp  Fragment.h  LaPack.hpp  Logger.cpp  Logger.h  Matrix.hpp  Molecule.cpp  Molecule.h  PMolException.cpp  PMolException.h  ParmContainer.cpp  ParmContainer.h  Pdb.cpp  Pdb.h  Ring.cpp  (+6 more)
src/VinaLC/: array3d.h  atom_constants.h  atom_type.h  brick.h  cache.cpp  common.h  conf.h  grid.cpp  manifold.cpp  matrix.h  model.cpp  model.h  parallel_mc.cpp  parse_pdbqt.cpp  precalculate.h  quaternion.cpp  quaternion.h  random.cpp  tree.h  triangular_matrix_index.h  weighted_terms.cpp
src/XML/: XMLAttribute.cpp  XMLAttribute.h  XMLAttributeSet.cpp  XMLAttributeSet.h  XMLBase.cpp  XMLBase.h  XMLComment.cpp  XMLComment.h  XMLConstant.hpp  XMLDeclaration.cpp  XMLDeclaration.h  XMLDocument.cpp  XMLDocument.h  XMLElement.cpp  XMLElement.h  XMLHandle.cpp  XMLHandle.h  XMLHeader.hpp  XMLNode.cpp  XMLNode.h  XMLParsingData.cpp  XMLParsingData.h  XMLPrinter.cpp  XMLPrinter.h  XMLText.cpp  XMLText.h  XMLUnknown.cpp  XMLUnknown.h  XMLUtils.hpp  XMLVisitor.hpp
tests/: AmberSplTest.cpp  AutoDockSplTest.cpp  DrugBankSplTest.cpp  GromacsSplTest.cpp  JobTrackSplTest.cpp  MainSplTest.cpp  Makefile.am  MySQLConnSplTest.cpp  NamdSplTest.cpp  PPL1ReceptorTest.cpp  ProteinSplTest.cpp  SstrmSplTest1.cpp  StdResContainerSplTest.cpp
tests/Sql/: Makefile.am  TestSql.cpp  TestSqlDataBase.cpp  TestSqlField.cpp  TestSqlFieldSet.cpp  TestSqlRecord.cpp  TestSqlRecordSet.cpp  TestSqlTable.cpp  TestSqlValue.cpp
(+42 files in other folders)
